# MagpiEM

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  MANIFEST.in  README.md  classes.py  cone_fix_readme.txt  dash_ui.py  docker-compose.yml  pyproject.toml  read_write.py  requirements.txt  setup.py
.github/workflows/: build-test.yml  cross-platform-test.yml  pypi-publish.yml  test.yml
MagpiEM/: __init__.py  classes.py  dash_ui.py  lamellae_014_1_neighbour_params.csv  plot_cache.py  plot_changes.py  read_write.py  utils.py
cache/: cache.db
docs/: conf.py  index.rst
magpiem/: cache.py  callbacks.py  cleaner.py  cpp_integration.py  layout.py  particle.py  plotting_helpers.py  tomogram.py  utilities.py
magpiem/cpp/: processing.cpp  processing.hpp  processing_extension.cpp  processing_wrapper.cpp
magpiem/dash/: __init__.py  callbacks_manager.py  dash_ui.py  layout.py  ui_callbacks.py
magpiem/io/: README_emC_format.txt  __init__.py  io_utils.py  mat_file_validation.py  save_callbacks.py  upload_callbacks.py
magpiem/plotting/: __init__.py  plot_cache.py  plotting_callbacks.py  plotting_utils.py
magpiem/processing/: __init__.py  cpp_integration.py  processing_callbacks.py  processing_utils.py
magpiem/processing/classes/: __init__.py  cleaner.py  particle.py  tomogram.py
processing/: comp.bat  ctypes_test.py  processing.cpp  processing.hpp
scripts/: filter_em_files.py  nearest_neighbour.py
test/: README.md  __init__.py  ctypes_test.py  dash_e2e_test.py  full_tests.py  requirements_test.txt  run_tests.py  run_ui_tests.py  run_workflow_test.py  selenium_test.py  start_app_for_testing.py  test_dash_ui.py  test_lattice_selection.py  test_plotting.py  test_utils.py  tomogram_plotting_test.py
test/data/: create_filtered_dataset.py  generate_small_lattice.py  small_lattice_coordinates.csv  test_data.mat
test/e2e/: __init__.py  install_playwright.py  test_e2e.py
test/integration/: __init__.py  cpp_python_comparison.py  ctypes_test.py  test_compare_cpp_python.py
test/unit/: __init__.py  test_cleaning_with_flips.py  test_find_flipped_particles.py  test_flip_emc_particles.py  test_io_utils.py  tomogram_plotting_test.py
