[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magpiem"
version = "0.2.14"
authors = [
  { name="Frank Nightingale", email="fnight128@gmail.com" },
]
description = "Automated cleaning of sub-tomogram particle picking data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
magpiem = "magpiem:dash_ui.main"

[project.urls]
"Homepage" = "https://github.com/fnight128/MagpiEM"
"Bug Tracker" = "https://github.com/fnight128/MagpiEM/issues"